fixed the   spacing between compoennts int he cards

--- a/src/styles/features/landing/hero.css
+++ b/src/styles/features/landing/hero.css
@@ -118,7 +118,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0rem 2rem 2rem;
+  padding: 7rem 4rem 4rem;
   flex: 0 0 42%;
   overflow: hidden;
 }
